# miktik_monitoring

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  commands-template.json  commands.json  grafana_dashboard.json
config/: commands.json  credentials.json
examples/: commands example.json
src/: lib.rs  main.rs
src/examples/: commands-template.json
src/templates/: index.html
templates/: index.html  reload_config.html
