[package]
name = "mikrotik_monitoring"
version = "0.2.0"
authors = ["aSlade"]
edition = "2018"

[[bin]]
name = "metrics"
path = "src/main.rs"

[lib]
name = "mik_api"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.2"
async-std = { version = "1.9.0", features = ["attributes"] }
tiny_http = "0.8.2"
termion = "1.5.6"

# actix-web = "3"
# rust-crypto = "0.2.36"
# rand = "0.8.3"