[package]
name = "mikrotik_monitoring"
version = "1.0.0"
authors = ["aSlade"]
edition = "2018"

[[bin]]
name = "metrics"
path = "src/main.rs"

[lib]
name = "miktik_api"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# native-tls = "0.2.7"
rustls = { version="0.19.1", features=["dangerous_configuration"] }
webpki = "0.21.4"
webpki-roots = "0.21.1"

# openssl = "0.10.34"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.2"
async-std = { version = "1.9.0", features = ["attributes"] }
tiny_http = "0.8.2"
termion = "1.5.6"

# actix-web = "3"
# rust-crypto = "0.2.36"
# rand = "0.8.3"